fixed stacking issue on mobile by adding flex row wrap

--- a/main.scss
+++ b/main.scss
@@ -52,3 +52,7 @@ body {
     color: #2B2B36;
 }
 
+.d-flex {
+    flex-flow: row wrap;    
+}
+
